<resources>
    <string name="app_name">AgendaContactos</string>
    <string name="nuevoC">Nuevo contacto</string>
    <string name="prefs">Preferencias</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Direccion</string>
    <string name="email">Direccion email</string>
    <string name="web">Pagina web personal / blog</string>
    <string name="foto">Foto</string>
    <string name="fotoHint">Pulse la imagen superior...</string>
    <string name="alta">Alta</string>

    <string name="telAg">Telefono agregado</string>
    <string name="fotoAg">Foto agregada</string>
    <string name="sinD">Sin descripcion</string>

    <!--Texto por defecto en los items del ListView -->
    <string name="listNom">Nombre contacto</string>
    <string name="listTel">Telefono contacto</string>
    <string name="listDir">Direccion contacto</string>
    <string name="listEmail">Email contacto</string>
    <string name="listWeb">Web/Blog contacto</string>

    <string name="listRecarg">Lista de contactos recargada</string>
    <string name="noVacios">Los campos Telefono y Foto no pueden estar vacios</string>
    <string name="errorReg">ERROR : No se ha insertado ningun registro</string>
    <string name="regIns">Registro insertado</string>
    <string name="errorRegTel">ERROR : No se han insertado telefonos</string>
    <string name="telIns">Telefonos insertados: </string>
    <string name="errorRegF">ERROR : No se han insertado fotos</string>
    <string name="FotIns">Fotos insertadas: </string>
    <string name="errorModif">ERROR : No se ha modificado ningun registro</string>
    <string name="regModif">Registro modificado</string>

    <string name="fotNomVac">Nombre vacio</string>
    <string name="fotNoSelImg">No se ha seleccionado una imagen</string>

    <string name="borrarC">Contacto borrado.</string>
    <string name="borrarTel">Telefonos borrados: </string>
    <string name="borrarFot">Fotos borradas: </string>
    <string name="borrarErr">ERROR: no se produjo el borrado correctamente</string>

    <string name="textoSMS">Texto del mensaje</string>

    <!--Textos de las preferencias -->
    <string name="prefGrupo">Preferencias de imagen</string>
    <string name="prefFoto">Escoja la fuente de la imagen</string>
    <string name="prefDescripcion">Escoja si prefiere usar la galeria o la camara</string>

    <!--Textos del drawer -->
    <string name="cabecera">ACCIONES</string>
    <string name="descripcionCab">Seleccione lo que desee hacer</string>
    <string name="itllamar">Llamar por telefono</string>
    <string name="itemail">Mandar un e-mail</string>
    <string name="itweb">Ir a web o blog</string>
    <string name="itfoto">Tomar foto</string>
    <string name="itTel">Gestionar tels. del contacto</string>
    <string name="itFot">Gestionar fotos del contacto</string>
    <string name="navOpen">Abrir Navigation Drawer </string>
    <string name="navClos">Cerrar Navigation Drawer </string>

    <string name="modif">Modificar</string>
    <string name="borrar">Borrar</string>

    <string name="errDial">El campo del telefono esta vacio</string>
    <string name="errEmail">El campo del correo esta vacio</string>
    <string name="errWeb">El campo de la web esta vacio</string>
    <string name="asunto">Asunto</string>
    <string name="textoDef">Texto por defecto</string>

    <!-- Strings de los listview de los telefonos y las fotos de un contacto -->
    <string name="unTelMod">Modificar</string>
    <string name="unTelBorrar">Eliminar</string>

    <string name="telefonoModif">Telefono modificado</string>
    <string name="telefonoErrorModif">Error al modificar telefono</string>
    <string name="menosdeuntel">No puede eliminar telefonos si solo queda uno</string>
    <string name="unTelBorrado">Telefono eliminado</string>
    <string name="unTelBorradoErr">Error al eliminar el telefono</string>

    <string name="tituloDescrip">Descripcion de foto</string>
    <string name="unaFBotonMod">Modificar descripcion</string>
    <string name="unaFBotonBorrar">Eliminar foto</string>
    <string name="fotoModif">Foto modificada</string>
    <string name="fotoErrorModif">Error al modificar la foto</string>
    <string name="menosdeunafoto">No puede eliminar fotos si solo queda una</string>
    <string name="unaFotBorrada">Foto eliminada</string>
    <string name="unaFotBorradaErr">Error al eliminar la foto</string>

</resources>
