<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/listFoto"
        android:layout_width="?android:attr/listPreferredItemHeight"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/listDatos"
        android:layout_toRightOf="@id/listFoto">


        <TextView
            android:text="@string/listNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listNombre"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"/>

        <TextView
            android:text="@string/listTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listTel"
            android:textSize="@dimen/text_size_medium"/>

        <TextView
            android:text="@string/listDir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listDir"
            android:textSize="@dimen/text_size_medium"/>
        <TextView
            android:text="@string/listEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listEmail"
            android:textSize="@dimen/text_size_medium"/>
        <TextView
            android:text="@string/listWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listWeb"
            android:textSize="@dimen/text_size_medium"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:id="@+id/listBotones"
        android:layout_below="@id/listDatos"
        android:layout_toRightOf="@id/listFoto">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/sym_action_email"
            android:id="@+id/listSms" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/sym_action_call"
            android:id="@+id/listLlamar" />
    </LinearLayout>

</RelativeLayout>